--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,8 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.body-container {
+  height: 100%;
+  background-image: url("./IMAGES/mathyas-kurmann-jnHQsTfq2Og-unsplash.jpg");
+}
